import "lib/rpc/rpc.proto";
import "lib/protocol/entity.proto";

package bnet.protocol.toon;

option cc_generic_services = false;

message ToonHandle
{
    required fixed64 id = 1;
    required fixed32 program = 2;
    required uint32 region = 3;
    required uint32 realm = 4;
}

message ToonName
{
    required string full_name = 1;
}

message ToonInfo
{
    required .bnet.protocol.toon.ToonName name = 1;
}

message CreateToonEntityRequest
{
    required uint32 realm = 1;
    required .bnet.protocol.EntityId game_account_id = 2;
    required uint32 token = 3;
    required .bnet.protocol.ProcessId original_sender = 4;
}

message CreateToonEntityResponse
{
    required .bnet.protocol.EntityId toon_id = 1;
}

message FinalizeToonCreationRequest
{
    required string name = 1;
    required .bnet.protocol.EntityId game_account_id = 2;
    required .bnet.protocol.EntityId toon_id = 3;
    required uint32 token = 4;
    required .bnet.protocol.ProcessId original_sender = 5;
}

